修改了对nc的互斥访问锁

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,48 +14,52 @@
         android:layout_height="300dp"
         android:background="@drawable/textview_border"
         android:fadeScrollbars="false"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingRight="10dp"
-        android:scrollbars="vertical"
         android:lineSpacingMultiplier="1.5"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:scrollbars="vertical"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/textView_showTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
+            android:maxLines="1"
             android:text=" "
             android:textColor="#FF0000"
-            android:textSize="20dp"
-            android:maxLines="1"
-            android:layout_marginBottom="5dp"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/textView_fileName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_showTime"
-            android:layout_gravity="center"/>
-        <TextView
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:maxLines="1"
             android:text="文件名："
             android:textColor="#000000"
-            android:textSize="15dp"
-            android:maxLines="1"
-            android:layout_marginBottom="10dp"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/textView_cur_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_fileName"
-            android:layout_gravity="center"/>
-        <TextView
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:maxLines="1"
             android:text="已有/共需数据片："
             android:textColor="#000000"
-            android:textSize="15dp"
-            android:maxLines="1"
-            android:layout_marginBottom="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView_cur_total"
-            android:layout_gravity="center"/>
+            android:textSize="15dp" />
 
     </LinearLayout>
 
@@ -65,33 +69,33 @@
         android:orientation="horizontal">
 
         <Button
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/button_server"
-            android:text="Server"
+            style="@android:style/Widget.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:text="Server" />
 
-            style="@android:style/Widget.Button" />
         <Button
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/button_client"
-            android:text="Client"
-            style="@android:style/Widget.Button" />
-        <Button
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
+            style="@android:style/Widget.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:text="Client" />
+
+        <Button
             android:id="@+id/button_selectFile"
-            android:text="选择文件"
-            style="@android:style/Widget.Button" />
+            style="@android:style/Widget.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:text="选择文件" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
