--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:icon="@android:drawable/ic_menu_manage">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="设置 N 值"
         app:showAsAction="never"
-        />
+       />
+
     <item
         android:id="@+id/action_openAppFolder"
         android:orderInCategory="100"
         android:title="打开工作目录"
         app:showAsAction="never"
         />
+
     <item
         android:id="@+id/action_description"
         android:orderInCategory="100"
